<resources>
    <string name="app_name">bss-android-lb1-3</string>
    <string name="tv_string_value">Bogdan Semeon</string>

<!--    numbers-->
    <string name="btn_n0_string">0</string>
    <string name="btn_n1_string">1</string>
    <string name="btn_n2_string">2</string>
    <string name="btn_n3_string">3</string>
    <string name="btn_n4_string">4</string>
    <string name="btn_n5_string">5</string>
    <string name="btn_n6_string">6</string>
    <string name="btn_n7_string">7</string>
    <string name="btn_n8_string">8</string>
    <string name="btn_n9_string">9</string>
<!--operators-->
    <string name="btn_plus_string">+</string>
    <string name="btn_minus_string">-</string>
    <string name="btn_divide_string">/</string>
    <string name="btn_multiply_string">*</string>
    <string name="btn_point_string">.</string>
    <string name="btn_equal_string">=</string>
    <string name="btn_backspace_string">&lt;&lt;&lt;</string>
    <string name="btn_sqrt_string">sqrt</string>
    <string name="btn_sqr_string">sqr</string>

    <string name="btn_next_activity_string">next</string>

    <string name="btn_go_back_string">Back</string>
    <string name="btn_go_next_string">Next</string>

    <string name="btn_home_string">Yes</string>
    <string name="tv_to_home_string">Go home?</string>

    <string name="empty_screen_view">0</string>


</resources>